Observable (subject) & Subscribe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
         <a class="nav-link" routerLink="appareils">Appareil</a>
       </li>
     </ul>
+    <div class="nav-bar-right"><p>Vous êtes connecté depuis {{secondes}} secondes</p></div>
   </div>
 </nav>
 <div class="container">
