--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,12 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="appareils">Appareil</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="edit">Nouvel Appareil</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="users">Utilisateurs</a>
+      </li>
     </ul>
     <div class="nav-bar-right"><p>Vous êtes connecté depuis {{secondes}} secondes</p></div>
   </div>
