--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -12,6 +12,8 @@
     <div class="btn-group">
       <button class="btn btn-success" [disabled]="!isAuth" (click)="onAllumer()">Tout allumer</button>
       <button class="btn btn-danger" (click)="onEteindre()">Tout éteindre</button>
+      <button class="btn btn-primary" (click)="onSave()">Sauvegarder</button>
+      <button class="btn btn-primary" (click)="onFetch()">Charger</button>
     </div>
   </div>
 </div>
