--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,25 +1,33 @@
-<div class="col-sm-8 col-offset-sm-2">
+<div class="col-sm-8 col-sm-offset-2">
   <form [formGroup]="userForm" (ngSubmit)="onSubmitForm()">
     <div class="form-group">
-      <label for="firstname"></label>
+      <label for="firstname">Prénom</label>
       <input type="text" class="form-control" id="firstname" formControlName="firstname">
     </div>
     <div class="form-group">
-      <label for="lastname"></label>
+      <label for="lastname">Nom</label>
       <input type="text" class="form-control" id="lastname" formControlName="lastname">
     </div>
     <div class="form-group">
-      <label for="email"></label>
+      <label for="email">Email</label>
       <input type="text" class="form-control" id="email" formControlName="email">
     </div>
     <div class="form-group">
       <label for="drinkPreference">Quelle boisson préférez vous ?</label>
-      <input type="text" class="form-control"  >
-      <select id="drinkPreference" formControlName="drinkPreference">
+      <select class="form-control" id="drinkPreference" formControlName="drinkPreferences">
         <option value="Pérrier">Pérrier</option>
         <option value="Coca">Coca</option>
       </select>
     </div>
-    <button class="btn btn-primary" type="submit">Envoyer</button>
+    <div formArrayName="hobbies">
+      <h3>Quels sont vos Hobbies ?</h3>
+      <div 
+        class="form-group" 
+        *ngFor="let hobbyControl of getHobbies().controls, let i = index">
+          <input type="text" class="form-control" [formControlName]="i">
+      </div>
+      <button type="button" class="btn btn-success" (click)="onAddHobbie()">Ajouter un hobby</button>
+    </div>
+    <button class="btn btn-primary" type="submit" [disabled]="userForm.invalid">Envoyer</button>
   </form>
 </div>
